[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["Saad Moazzam"]

[dependencies]
axum = "0.8.4"
hyper = { version = "1.6.0", features = ["full"] }
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.6"
