[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["Saad Moazzam"]

[dependencies]
axum = "0.8.8"
hyper = { version = "1.8.1", features = ["full"] }
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.8"
