[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
authors = ["Saad Moazzam"]

[dependencies]
axum = "0.8.4"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
