[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
authors = ["Saad Moazzam"]

[dependencies]
axum = "0.8.7"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
